# optimal-candidate-key-ip

./: Makefile  README.md  demo.ipynb  pyproject.toml
src/: FD.py  tcand.py
tests/: test_minimal_core_ip_exact.py
